[metadata]
name = openpulse
url = https://github.com/openqasm/openpulse/
author = OpenQASM Contributors
description = Reference OpenPulse AST in Python
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 Software License
license_files =
    LICENSE
keywords = openqasm quantum openpulse
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
version = attr: openpulse.__version__
python_requires = '>=3.7'

[options]
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime # __ANTLR_VERSIONS__
    importlib_metadata; python_version<'3.10'
    openqasm3[parser]>=0.5,<1.0

[options.packages.find]
exclude = tests*

[options.extras_require]
tests =
    pytest>=6.0
    pyyaml
all =
    %(tests)s
